--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react-router-dom": "^5.3.3",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
+    "flowbite": "^1.4.1",
     "js-cookie": "^3.0.1",
+    "postcss-cli": "^9.1.0",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
@@ -20,6 +22,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
+    "sass": "^1.49.11",
+    "tailwindcss": "^3.0.23",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -51,9 +55,8 @@
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.3",
-    "postcss": "^8.4.8",
-    "tailwindcss": "^3.0.23"
+    "chokidar-cli": "^3.0.0"
   }
 }
