--- a/package.json
+++ b/package.json
@@ -11,25 +11,30 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-router-dom": "^5.3.3",
     "bcryptjs": "^2.4.3",
+    "custom-env": "^2.0.1",
     "dotenv": "^16.0.0",
     "flowbite": "^1.4.1",
     "js-cookie": "^3.0.1",
+    "mongodb": "^4.5.0",
+    "next": "^12.1.5",
+    "next-connect": "^0.12.2",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "postcss-cli": "^9.1.0",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.11.0",
     "sass": "^1.49.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "proxy": "http://localhost:5001",
   "eslintConfig": {
@@ -54,8 +59,12 @@
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@types/js-cookie": "^3.0.1",
+    "@types/node": "^17.0.24",
+    "@types/react": "^17.0.44",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.3",
-    "chokidar-cli": "^3.0.0"
+    "chokidar-cli": "^3.0.0",
+    "typescript": "^4.6.3"
   }
 }
