--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@types/bcrypt": "^5.0.0",
     "@types/js-cookie": "^3.0.1",
     "@types/node": "^17.0.24",
     "@types/react": "^17.0.44",
