--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/js-cookie": "^3.0.1",
     "@types/node": "^17.0.24",
     "@types/react": "^17.0.44",
