--- a/package.json
+++ b/package.json
@@ -3,31 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@headlessui/react": "^1.5.0",
-    "@heroicons/react": "^1.0.6",
-    "@material-ui/core": "^4.12.3",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.1",
     "@types/passport": "^1.0.7",
-    "@types/react-router-dom": "^5.3.3",
     "bcryptjs": "^2.4.3",
     "custom-env": "^2.0.1",
     "dotenv": "^16.0.0",
-    "flowbite": "^1.4.1",
-    "js-cookie": "^3.0.1",
     "mongodb": "^4.5.0",
     "next": "^12.1.5",
     "next-connect": "^0.12.2",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "postcss-cli": "^9.1.0",
-    "react": "^17.0.2",
+    "react": "^18.0.0",
     "react-cookie": "^4.1.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
     "react-spinners": "^0.11.0",
     "sass": "^1.49.11",
     "web-vitals": "^2.1.4"
