--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.1",
+    "@reduxjs/toolkit": "^1.8.1",
     "bcryptjs": "^2.4.3",
     "custom-env": "^2.0.1",
     "dotenv": "^16.0.0",
@@ -20,6 +21,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-spinners": "^0.11.0",
+    "redux": "^4.2.0",
     "sass": "^1.49.11",
     "web-vitals": "^2.1.4"
   },
