--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.0.1",
     "react-spinners": "^0.11.0",
     "redux": "^4.2.0",
     "sass": "^1.49.11",
